<resources>
    <string name="app_name">Elementary Editor</string>
    <string name="info_tap_to_open_gallery">Tap anywhere to open Gallery</string>
    <string name="label_crop">Crop</string>
    <string name="label_rotate">Rotate</string>
    <string name="label_cancel_processing">Cancel Processing</string>
    <string name="notification_title_crop_image">Cropping Image</string>
    <string name="notification_title_preparing_photo">Preparing Photo</string>
    <string name="progress_processing_image">Processing Image…</string>
    <string name="progress_saving">Saving…</string>
    <string name="info_saved">Saved!</string>
    <string name="info_cancelled">Cancelled</string>
    <string name="error_editing_failed">Failed processing your image</string>
    <string name="error_exporting">Failed Exporting your image</string>
    <string name="notification_channel_id">edits</string>
    <string name="notification_channel_name">Edit Operations</string>
    <string name="label_undo">Undo</string>
    <string name="label_redo">Redo</string>
    <string name="info_save_changes_warning">Save your changes or discard them?</string>
    <string name="error_operation_failed">Failed to apply your changes</string>
    <string name="action_save">Save</string>
    <string name="action_discard">Discard</string>
    <string name="action_cancel">Cancel</string>
    <string name="label_compare">Compare</string>
    <string name="label_save">Save</string>
    <string name="notification_title_saving_image">Saving Image</string>
</resources>