<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_undo"
        android:icon="@drawable/ic_undo"
        android:orderInCategory="0"
        android:title="@string/label_undo"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_item_redo"
        android:icon="@drawable/ic_redo"
        android:title="@string/label_redo"
        android:orderInCategory="3"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item_compare"
        android:icon="@drawable/ic_compare"
        android:orderInCategory="1"
        android:title="@string/label_compare"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item_export"
        android:icon="@drawable/ic_save"
        android:orderInCategory="3"
        android:title="@string/label_save"
        app:showAsAction="ifRoom" />
</menu>